ansible/playbooks/roles/fruitsdeploy/files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
        #- path: /banana
        #  backend:
        #    serviceName: banana-service
        #    servicePort: 5678
